<?xml version="1.0"?>
<package format="2">
  <name>fft_wrapper</name>
  <version>1.0.0</version>
  <description>
    fft
  </description>

  <author>Andrea Censi</author>
  <license>LGPL</license>

  <url type="website">http://censi.mit.edu/software/csm</url>
  <url type="website">http://wiki.ros.org/csm</url>
  <url type="repository">https://github.com/AndreaCensi/csm</url>
  <url type="bugtracker">https://github.com/AndreaCensi/csm/issues</url>
  <maintainer email="130s@2000.jukuin.keio.ac.jp">Isaac I.Y. Saito</maintainer>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>cmake_modules</build_depend>

  <depend>roscpp</depend>
</package>
